--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Bucketlist" />
+    <meta property="og:title" content="Movie" />
     <meta property="og:description" content="Tugas chap 8" />
     <meta property="og:image" content="{{ url_for('static', filename='image.png') }}" />
 
